// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toMessageContentContains should fail due to no message was sent by the bot 1`] = `
Object {
  "message": "    
    expected: testing bot to send a message
    received: no message was sent
",
  "pass": false,
  "testName": "toMessageContentContains",
}
`;

exports[`testing toMessageContentContains should get fail test due to bot returned different messages both primitive values 1`] = `
Object {
  "message": "    
    expected 'this is the message content' to contains 'expect value'
",
  "pass": false,
  "testName": "toMessageContentContains",
}
`;

exports[`testing toMessageContentContains should get success test due to bot returned a contained message 1`] = `
Object {
  "pass": true,
  "testName": "toMessageContentContains",
}
`;

exports[`testing toMessageContentContains should get success test due to bot returned equal message 1`] = `
Object {
  "pass": true,
  "testName": "toMessageContentContains",
}
`;

exports[`testing toMessageContentContains should get success test due to timeout but isNot = true 1`] = `
Object {
  "pass": true,
  "testName": "toMessageContentContains",
}
`;

exports[`testing toMessageContentContains should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "    
    can not send message to channel x
",
  "pass": false,
  "testName": "toMessageContentContains",
}
`;

exports[`testing toMessageContentContains should return a failed test due to invalid parameter (null) 1`] = `
Object {
  "message": "    
    expected content can not be null or empty
",
  "pass": false,
  "testName": "toMessageContentContains",
}
`;

exports[`testing toMessageContentContains should return a failed test due to invalid parameter (undefined) 1`] = `
Object {
  "message": "    
    expected content can not be null or empty
",
  "pass": false,
  "testName": "toMessageContentContains",
}
`;
